# ITP_S2_Lab3

./: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp  shunting_yard.cpp  shunting_yard.h  stack.h  token.cpp  token.h
test/: CMakeLists.txt  calculator_test.cpp
